--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Chunmin Tang
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
